# curvefit

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  curvefitConfig.cmake.in  package.json  temp_gnuplot_file.plt
doc/: Doxyfile
doc/html/: annotated.html  annotated_dup.js  classes.html  curvefit__calibration_8f90_source.html  curvefit__core_8f90_source.html  curvefit__interp_8f90_source.html  curvefit__regression_8f90_source.html  curvefit__statistics_8f90_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  files.html  functions.html  functions_func.html  functions_vars.html  graph_legend.html  hierarchy.html  hierarchy.js  index.html  inherit_graph_0.dot  inherit_graph_0.md5  inherit_graph_1.dot  inherit_graph_1.md5  inherit_graph_10.dot  inherit_graph_10.md5  inherit_graph_11.dot  inherit_graph_11.md5  inherit_graph_12.dot  inherit_graph_12.md5  inherit_graph_13.dot  inherit_graph_13.md5  inherit_graph_14.dot  inherit_graph_14.md5  inherit_graph_15.dot  inherit_graph_15.md5  inherit_graph_16.dot  inherit_graph_16.md5  inherit_graph_17.dot  inherit_graph_17.md5  inherit_graph_18.dot  inherit_graph_18.md5  (+177 more)
doc/html/search/: all_0.js  all_1.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  functions_d.js  namespaces_0.js  searchdata.js  (+4 more)
examples/: CMakeLists.txt  curvefit_c_interp_example.c  curvefit_c_lowess_example.c  curvefit_c_nlreg_example.c  curvefit_cal_example.f90  curvefit_interp_example.f90  curvefit_linear_interp_example.f90  curvefit_lls_matrix_example.f90  curvefit_lls_scalar_example.f90  curvefit_lowess_example.f90  curvefit_moving_avg_example.f90  curvefit_nlreg_example.f90  curvefit_nonlin_reg_example.f90  curvefit_poly_interp_example.f90  curvefit_spline_interp_example.f90  curvefit_stats_example_1.f90  curvefit_stats_example_2.f90
include/: curvefit.h
src/: CMakeLists.txt  curvefit_c_binding.f90  curvefit_calibration.f90  curvefit_core.f90  curvefit_interp.f90  curvefit_regression.f90  curvefit_statistics.f90
tests/: CMakeLists.txt  curvefit_c_test.c  curvefit_test.f90  curvefit_test_calibration.f90  curvefit_test_interp.f90  curvefit_test_regression.f90  curvefit_test_statistics.f90
